--- a/Views/admin/blog/BlogTag.cshtml
+++ b/Views/admin/blog/BlogTag.cshtml
@@ -93,7 +93,7 @@
                                 <td>
                                     <button class="status admit"
                                             style="border: none; outline: none; background-color:@(tag.Status == true ? "" : "#dc3545")"
-                                            onclick="toggleStatus(this, '@tag.TagId', @(tag.Status.ToString().ToLower()))">
+                                            onclick="toggleStatus(this, '@tag.TagID', @(tag.Status.ToString().ToLower()))">
                                         @(tag.Status == true ? "Active" : "Disable")
                                     </button>
                                 </td>
@@ -102,13 +102,13 @@
                                         <button class="action-btn edit"
                                                 data-bs-toggle="modal"
                                                 data-bs-target="#editModal"
-                                                onclick="fillEditModal('@tag.TagId', '@tag.Name', '@(tag.Status == true ? "true" : "false")')">
+                                                onclick="fillEditModal('@tag.TagID', '@tag.Name', '@(tag.Status == true ? "true" : "false")')">
                                             <i class="fas fa-edit"></i>
                                         </button>
                                         <button class="action-btn delete"
                                                 data-bs-toggle="modal"
                                                 data-bs-target="#deleteModal"
-                                                onclick="setDeleteTagId('@tag.TagId')">
+                                                onclick="setDeleteTagId('@tag.TagID')">
                                             <i class="fas fa-trash"></i>
                                         </button>
                                     </div>
@@ -163,7 +163,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <input type="hidden" name="TagId" id="editTagID">
+                        <input type="hidden" name="TagID" id="editTagID">
                         <div class="mb-3">
                             <label for="editName" class="form-label">Tag Name</label>
                             <input type="text" class="form-control" id="editName" name="Name" required>
